--- a/blogpos.html
+++ b/blogpos.html
@@ -1,4 +1,5 @@
-<html>
+
+<!-- <html>
     <head>
         <titile>el titulo del post</titile>
         <link rel="stylesheet" href="css/estilos.css"
@@ -6,5 +7,23 @@
     <body>
         <h1>aqui vamos a hacer un blog post</h1>
         <P>y este es el parrafo de inicio</P>
+    </body>
+</html> -->
+
+<html>
+    <head>
+        <title>El titulo del post</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                Cabecera
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+            </div>
+        </div>
     </body>
 </html>
