--- a/blogpos.html
+++ b/blogpos.html
@@ -18,7 +18,7 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                Cabecera
+                hyperblog
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
