--- a/blogpos.html
+++ b/blogpos.html
@@ -23,6 +23,7 @@
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p> en este curso estoy aprendiendo muchas cosas antes no sabia lo que era este mucho hatsa este momento.<p>
             </div>
         </div>
     </body>
