--- a/blogpos.html
+++ b/blogpos.html
@@ -18,12 +18,13 @@
     <body>
         <div id="container">
             <div id="cabecera">
-                hyperblog
+                hyperblog es una cosa loca
             </div>
             <div id="post">
                 <h1>Este es el título atractivo e interesante del post</h1>
                 <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p> en este curso estoy aprendiendo muchas cosas antes no sabia lo que era este mucho hatsa este momento.<p>
+                <p>jaajaja ahora aprendi porque me saca estas cosas al final jajajaja es mejor dicho cosa de locos </p>
             </div>
         </div>
     </body>
