lo cambie porque puedo
porque puedo

--- a/blogpos.html
+++ b/blogpos.html
@@ -1,7 +1,7 @@
 
 <!-- <html>
     <head>
-        <titile>el titulo del post</titile>
+        <titile>hago este cambio porque puedo</titile>
         <link rel="stylesheet" href="css/estilos.css"
     </head>
     <body>
