--- a/blogpos.html
+++ b/blogpos.html
@@ -12,7 +12,7 @@
 
 <html>
     <head>
-        <title>hago este cambio porque puedo hp</title>
+        <title>bienvenidos a hyperblogs 2.0</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
