--- a/blogpos.html
+++ b/blogpos.html
@@ -12,7 +12,7 @@
 
 <html>
     <head>
-        <title>bienvenidos a hyperblogs 2.0 ,mas dos mas intento cambio de contraseña</title>
+        <title>bienvenidos a hyperblogs 2.0 ,</title>
         <link rel="stylesheet" href="css/estilos.css" />
     </head>
     <body>
@@ -21,8 +21,8 @@
                 hyperblog de confianza
             </div>
             <div id="post">
-                <h1>Este es el título atractivo e interesante del post</h1>
-                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <h1>nuevo cambio toca estar cambiando para probar la clave sshEste es el título atractivo e interesante del post</h1>
+                <p>mas dos mas intento cambio  Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p> en este curso estoy aprendiendo muchas cosas antes no sabia lo que era este mucho hatsa este momento.<p>
                 <p>jaajaja ahora aprendi porque me saca estas cosas al final jajajaja es mejor dicho cosa de locos </p>
             </div>
