color de fondo, nuevo logo

--- a/blogpos.html
+++ b/blogpos.html
@@ -10,7 +10,7 @@
     </body>
 </html> -->
 
-<html>
+<!-- <html>
     <head>
         <title>bienvenidos a hyperblogs 2.0 ,</title>
         <link rel="stylesheet" href="css/estilos.css" />
@@ -25,6 +25,29 @@
                 <p>mas dos mas intento cambio  Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
                 <p> en este curso estoy aprendiendo muchas cosas antes no sabia lo que era este mucho hatsa este momento.<p>
                 <p>jaajaja ahora aprendi porque me saca estas cosas al final jajajaja es mejor dicho cosa de locos </p>
+            </div>
+        </div>
+    </body> -->
+<!-- </html> -->
+
+
+<html>
+    <head>
+        <title>Bienvenido a Hyperblog 2.0</title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/xelor.png" />
+                Hyperblog
+                <span id="tagline">Tu blog de cabecera</span>
+            </div>
+            <div id="post">
+                <h1>Este es el título atractivo e interesante del post</h1>
+                <p>Y este es el parrafo de inicio donde vamos a explicar las cosas increéibles que se pueden hacer con ramas</p>
+                <p>Los blogs son la mejor forma de compartir información y tus ideas. Mucho mas que ir a conferencias o salir en Youtube. Excepto si eres un rockstar. Pero estadísticamente no lo eres.... por ahora.</p>
+                <p>Suscribete y dale like</p>
             </div>
         </div>
     </body>
